Alterações API
