# api/models/model_fazenda.js
@@ -1,13 +1,0 @@
-const mongoose = require("mongoose");
-
-const fazendaSchema = new mongoose.Schema({
-  nome: {
-    type: String,
-    required: true,
-    trim: true,
-    uppercase: true,
-  },
-  Nome: { type: Number, required: true },
-});
-
-module.exports = mongoose.model("Fazendas", fazendaSchema);
